<resources>
    <string name="app_name">QuizApp</string>
    <string name="change_password">Change Password</string>
    <string name="change_pwd_head">Change your Password</string>
    <string name="change_pwd_instruction">You can change your password after authenticating your profile by entering your current password</string>
    <string name="curr_pwd">Current Password*</string>
    <string name="new_pwd">New Password*</string>
    <string name="authenticate">Authenticate</string>
    <string name="profile_not_authenticated">Your profile is not authenticated yet!</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_user_head">Delete your Profile</string>
    <string name="delete_user_instruction">You can delete your profile and all related data after authenticating your profile by entering your current password</string>
    <string name="user_pwd">Password*</string>
    <string name="change_pwd_button">Change Password</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="weathapp">QuizApp</string>
    <string name="welcome_nto_nandroid_firebase_app">Welcome</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="please_register_yourself_to_continue_with_the_amazing_experience">Please register yourself to continue with the amazing experience!</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="sign_up">Sign-up</string>
    <string name="enter_your_mobile_no_without_216">enter your mobile no. (without +216)</string>
    <string name="password">Password*</string>
    <string name="enter_your_password">enter your password</string>
    <string name="click_here_to_reset">Click here to reset</string>
    <string name="upload_pic_u">Upload your pic</string>
    <string name="update_email_u">Update your email</string>
    <string name="user_display_picture" />
    <string name="loading">Loading</string>
    <string name="name" />
    <string name="email" />
    <string name="dob" />
    <string name="gender" />
    <string name="mobile" />
    <string name="registered_user_since" />
    <string name="select_your_date_of_birth_dd_mm_yyyy">Select your date of birth (dd/mm/yyyy)</string>
    <string name="enter_password">Enter password</string>
    <string name="you_can_update_your_profile_to_stay_up_to_date">You can update your profile to stay up to date!</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="update_your_email_address">Update your Email Address</string>
    <string name="you_can_update_your_email_address_after_you_authenticate_your_profile_by_entering_your_password">You can update your email address after you authenticate your profile by entering your password.</string>
    <string name="current_email">Current Email</string>
    <string name="enter_your_passwordd">enter your password</string>
    <string name="authenticatee">Authenticate</string>
    <string name="your_profile_is_not_authenticated_yet">Your profile is not Authenticated yet!</string>
    <string name="new_email">New Email*</string>
    <string name="enter_your_new_email_address">enter your new email address</string>
    <string name="update_email">Update Email</string>
    <string name="go_to_quizz">Go To Quizz</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="total_questions">Total des questions</string>
    <string name="Voici_la_question">Voici la question</string>
    <string name="ans_a">Ans A</string>
    <string name="ans_b">Ans B</string>
    <string name="ans_c">Ans C</string>
    <string name="ans_d">Ans D</string>
    <string name="submit">Submit</string>

    <string name="go_to_quiz">go to quiz</string>
    <string name="_00">00</string>
    <string name="this_will_be_the_question">This will be the question</string>
    <string name="your_last_score_is">Your last score is:</string>
</resources>