<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:orientation="vertical"
        tools:context=".UpdateEmailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/purple_700"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_update_email_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/update_your_email_address"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_update_email_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/you_can_update_your_email_address_after_you_authenticate_your_profile_by_entering_your_password"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@color/white" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RL_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-50dp"
                android:background="@drawable/border"
                android:padding="15dp">


                <RelativeLayout
                    android:id="@+id/RL_curr_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewEmail"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/textView_update_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:padding="6dp"
                        android:text="@string/current_email" />

                    <View
                        android:id="@+id/divider_email"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_update_email"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView_update_email_old"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_update_email"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:background="@android:color/transparent"
                        android:padding="6dp"
                        android:textColor="#555555"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_curr_email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewPwd"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_pwd_bw" />

                    <TextView
                        android:id="@+id/textView_update_email_verify_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:padding="6dp"
                        android:text="Password*" />

                    <View
                        android:id="@+id/divider_pwd"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_update_email_verify_password"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_update_email_verify_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_update_email_verify_password"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_your_passwordd"
                        android:inputType="textPassword"
                        android:padding="6dp"
                        android:textCursorDrawable="@drawable/edittextcursor"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/imageView_show_hide_pwd"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_below="@id/textView_update_email_verify_password"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/button_authenticate_user"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_pwd"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/authenticatee" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/RL_email"
                android:layout_margin="15dp"
                android:background="@drawable/border"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView_update_email_authenticated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/your_profile_is_not_authenticated_yet"
                    android:textAlignment="center"
                    android:textColor="#555555"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/RL_new_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_update_email_authenticated"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewNewEmail"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/textView_update_email_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewNewEmail"
                        android:padding="6dp"
                        android:text="@string/new_email" />

                    <View
                        android:id="@+id/divider_new_email"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_update_email_new"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_update_email_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_update_email_new"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewNewEmail"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_your_new_email_address"
                        android:inputType="textEmailAddress"
                        android:padding="6dp"
                        android:textCursorDrawable="@drawable/edittextcursor"
                        android:textSize="16sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/button_update_email"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_new_email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/update_email" />



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>